--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <button class="btn" onclick="appendValue('.')">.</button>
     </div>
   </div>
+  <div>
+    <button>hh</button>
+  </div>
 
   <script src="index.js"></script>
 </body>
